# tistory-blog-auto

./: .gitignore  CLAUDE.md  PROJECT.md  PROJECT_STATE.md  generate.bat  pyproject.toml  requirements.txt
.claude/: settings.json  settings.local.json
.claude/agents/: content-strategist.md  coupang-specialist.md  quality-reviewer.md  seo-optimizer.md  trend-researcher.md
.claude/commands/: publish.md  revenue-report.md  trend.md
.github/workflows/: daily-pipeline.yml  daily-posts.yml
config/: .env.example  ads.txt  blog_improvement_report.md  settings.yaml
config/sites/: uyoblog.yaml
data/: 30day_plan.md  blog_posts_index.json  coupang_cache.json  indexed_urls.json  keyword_category_cache.json  posts_db.json  published_titles.json  trend_insights.json  used_images.json
data/pipeline/: keywords_2026-04-03_health.json  keywords_2026-04-03_it.json  keywords_2026-04-04_health.json  keywords_2026-04-04_it.json  (+42 more)
output/: post_춘곤증극복.html  post_춘곤증극복_도구.html  post_춘곤증극복_최종.html  preview_꽃가루 알레르기 예방법.html  preview_춘곤증_스타일맞춤.html  preview_춘곤증_스타일맞춤.json  sample_sunscreen_post.html  test_image_post.html  건강온도사_블로그자동화_프로젝트보고서.docx
scripts/: crawl_blog_posts.py  daily_publish.py  download_images.py  generate_daily_posts.py  generate_extra_posts.py  generate_health_news.py  generate_it_posts.py  generate_report.py  generate_sample.py  request_indexing.py  step1_keywords.py  step2_filter.py  step3_generate.py  step4_rewrite.py
templates/: blog_post.html  listicle.html  product_review.html
tests/: test_content_generator.py  test_coupang_api.py  test_publisher.py
(+755 files in other folders)
