[project]
name = "tistory-blog-automation"
version = "1.0.0"
description = "티스토리 블로그 자동화 시스템 - 쿠팡 파트너스 + 애드센스 수익화"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40.0",
    "google-genai>=1.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "apscheduler>=3.10.0",
    "jinja2>=3.1.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
"src/coupang/link_generator.py" = ["E501"]
"src/adsense/ad_inserter.py" = ["E501"]
"tests/*" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
